# integrations-backend

./: Makefile  README.md  docker-compose.yml
dashboard_service/: Dockerfile  (+1 more)
dashboard_service/src/: conftest.py  pyproject.toml
dashboard_service/src/alembic/: env.py
dashboard_service/src/alembic/versions/: 469497084bf8_added_booking_stats.py
dashboard_service/src/app/: deps.py  main.py  settings.py
dashboard_service/src/app/api/: routes.py
dashboard_service/src/app/api/endpoints/: dashboard.py  meta.py
dashboard_service/src/app/database/: session.py
dashboard_service/src/app/models/: booking.py
dashboard_service/src/app/repositories/: booking.py  dashboard.py
dashboard_service/src/app/schemas/: booking.py  dashboard.py
dashboard_service/src/app/services/: booking.py  dashboard.py
dashboard_service/src/app/tests/repositories/: test_dashboard.py
dashboard_service/src/app/tests/services/: test_dashboard.py
data_provider/src/: .flake8  .pre-commit-config.yaml  Makefile  conftest.py  pyproject.toml
data_provider/src/app/: deps.py  main.py  settings.py
data_provider/src/app/api/: routes.py
data_provider/src/app/api/endpoints/: events.py  meta.py
data_provider/src/app/database/: session.py
data_provider/src/app/models/: events.py
data_provider/src/app/repositories/: events.py
data_provider/src/app/schemas/: events.py  meta.py
data_provider/src/app/tests/: meta_test.py
data_provider/src/migrations/: env.py
data_provider/src/migrations/versions/: f364fd6ccfbc_remove_room_reservation_id_from_events.py  fb4ef7b1c673_add_event_model.py
(+5 files in other folders)
